# pySpinW

./: .gitignore  .pylintrc  CITATION.cff  Cargo.toml  README.md  meson.build  pypackage.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff-strict.toml
calculations/: spinwave.py
debug/: check_point_group_form.py  check_spacegroup_consistency.py  exchange_copying.py  hamiltonian_symmetry_check_debug.py  intframebuffer.py  optimisation_test_1.py  plotting_debug.py  supercell_plots.py  symmetry_check_demos.py  symmetry_checking.py  viewer_axes_debug.py  viewer_color_test.py  viewer_debug.py  viewer_debug_multiple_windows.py  viewer_lattice_axes_debug.py  viewer_pretty_test_1.py  viewer_pretty_test_2.py  viewer_snapshot.py  viewer_test.py  viewer_test_nonmagnetic.py
docs/: exchange_symmetries.md
example_structures/: 1.2_CuSe2O5-extended.mcif  1.2_CuSe2O5.mcif  1100231.cif
examples/: diamond.py  dump_spacegroups.py  hexagonal_crystal_test.py  serialisation.py  simple_chain.py  site_creation.py  spacegroup_creation.py  structure_creation.py
pyspinw/: __init__.py  _base.py  anisotropy.py  another_mode_sort.py  bad_lint.py  basis.py  batch_couplings.py  batch_exchanges.py  cell_offsets.py  checks.py  cif.py  constants.py  coupling.py  couplinggroup.py  data.py  debug_plot.py  demo.py  dimensionality.py  exchange.py  exchangegroup.py  exchangemetadata.py  experiment.py  hamiltonian.py  instrument.py  interface.py  lattice_distances.py  magneticstructure.py  measurement.py  meson.build  modes.py  mutablestructure.py  path.py  polarisation.py  propagationvector.py  sample.py  serialisation.py  site.py  sitemeta.py  spinwave.py  structure.py  (+9 more)
pyspinw/calculations/: __init__.py  energy_minimisation.py  fibonacci.py  geodesic.py  k_optimisation.py  meson.build  notes  spherical_integration.py  spinwave.py
pyspinw/calculations/optimisation/: energy_minimisation.py  site_parameterisation.py
pyspinw/data/: __init__.py  _unfuck.py  bns_uni_hall_gen.txt  magnetic_symmetry_conventions  magnetic_symmetry_conventions.csv  meson.build
pyspinw/gui/: __init__.py  alternatesiteeditor.py  buffers.py  camera.py  cell_offsets.py  coordinateeditor.py  coupling_creation.py  couplingcreator.py  couplingeditor.py  couplingtable.py  crystaleditor.py  crystalview.py  decorated.py  displayoptions.py  displayoptionstoolbar.py  edge_cases.py  editor.py  lattice.py  load_shaders.py  mainwindow.py  meson.build  new_crystalviewer.py  new_viewer.py  render_model.py  rendermodel.py  renderoptions.py  settings.py  sitecouplingeditor.py  siteeditor.py  sites.py  sitetable.py  spheres.py  symmetry.py  symmetry_settings.py  symmetryeditor.py  text_display.py  textdisplay.py  unitcell.py  util.py  viewer.py  (+1 more)
pyspinw/gui/crystalviewer/: __init__.py  actionlabel.py  arrowgraphics.py  sitegraphics.py  unitcell.py  unitcellgraphics.py  viewer.py
pyspinw/gui/crystalviewer/GL/: __init__.py  color.py  cone.py  cube.py  cylinder.py  icosahedron.py  models.py  renderable.py  scene.py  sphere.py  surface.py  transforms.py
pyspinw/gui/crystalviewer/GL/visual_checks/: __init__.py  primitive_library.py  transform_library.py
pyspinw/gui/helperwidgets/: __init__.py  actionlabel.py  alternatesitetable.py  couplingtypecombo.py  debug.py  dockwidget.py  floatfield.py  index_field.py  misc.py  numbers.py  parametertable.py  sitetable.py
pyspinw/gui/icons/: __init__.py  iconload.py  invert_svgs.py
pyspinw/gui/rendering/: __init__.py  arrow.py  axes_shader.py  cell_shader.py  display_options.py  id_shader.py  load_shaders.py  model.py  object_shader.py  renderable.py  renderable_objects.py  rendering.py  selection_shader.py  selectionmode.py  shader.py  site.py  sphere.py  tube.py
pyspinw/gui/rendering/models/: __init__.py  arrow.py  sphere.py  tube.py  wrireframe_cube.py
pyspinw/gui/rendering/shaders/: cell_fragment.glsl  default_fragment.glsl  default_vertex.glsl  emission_fragment.glsl  id_fragment.glsl  object_fragment.glsl  object_vertex.glsl  phong_fragment.glsl  phong_vertex.glsl  selection_fragment.glsl  selection_vertex.glsl  tailored_fragment.glsl  wireframe_geometry.glsl
pyspinw/gui/shaders/: default_fragment.glsl  default_vertex.glsl
pyspinw/inputoutput/: cif.py
pyspinw/io/: cif.py
pyspinw/legacy/: gencoupling.py  genlattice.py  genmagstr.py
pyspinw/oldstyle/: __init__.py  genlattice.py  genmagstr.py  supercell.py
pyspinw/reference/: intmatrix.m  spinwave.m
pyspinw/symmetry/: __init__.py  bravais.py  bravais2.py  build_spacegroup_lookup_data.py  canonise.py  geometry.py  group.py  group_conventions.py  magneticstructure.py  operations.py  settings.py  spacegroup_lookup.py  supercell.py  symmetry_checking.py  system.py  system2.py  unitcell.py  variable_reduction.py
pyspinw/symmetry/data/: __init__.py  _extract_data.py  msg_symbols.py  msg_symbols.txt  preferred_spacegroup_names.txt  spacegroup_aliases_canonised.txt  spacegroup_aliases_formatted.txt  spacegroup_canonised_to_formatted.txt  spacegroup_data_raw_bilbao.txt  spacegroup_name_lookup.txt  spacegroup_names.txt
pyspinw/util/: apply_generators.py  closures.py  crysfml_load.py  group_generators.py  magnetic_symmetry.py  safe_expression_evaluation.py
pyspinw/visualisation/: __init__.py  meson.build
src/: cholesky.rs  constants.rs  eigs.rs  ldl.rs  ldl_lapack.rs  lib.rs  postprocessing.rs  spinwave.rs  utils.rs
tests/: _test_sitemeta.py  check_spglib_database_is_closed.py  check_subsets.py  investigate_closures.py  investigate_generators.py  investigate_spglib_access.py  match_databases.py  matlab_test_data.mat  test_basis.py  test_calc_impls.py  test_cif_reading.py  test_coupling_generation.py  test_coupling_groups.py  test_create_couplings.py  test_create_exchanges.py  test_crystal_systems.py  test_dimensions.py  test_exchange_generation.py  test_exchange_groups.py  test_expansion.py  test_find_distances.py  test_generators.py  test_interface.py  test_lattice_systems.py  test_operators.py  test_optimisation.py  test_optimisation_supercell.py  test_packaging.py  test_paths.py  test_propagation_vector_optimisation.py  (+14 more)
(+109 files in other folders)
