[package]
name = "pySpinW"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.23.3", features=["num-complex"]}
numpy = "0.23.0"
faer = "0.22.6"
faer-ext = {version="0.6.0", features=["numpy"]}
num-complex = "0.4.6"
rayon = "1.10.0"
