[package]
name = "pySpinW"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.26", features=["num-complex"]}
numpy = "0.26.0"
faer = "0.23.1"
faer-ext = {version="0.7.1", features=["numpy"]}
num-complex = "0.4.6"
rayon = "1.11.0"
