[package]
name = "spinw-python"
version = "1.0.0-alpha.2"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.26", features=["num-complex"]}
numpy = "0.26.0"
faer = "0.23.1"
faer-ext = {version="0.7.1", features=["numpy", "ndarray"]}
num-complex = "0.4.6"
rayon = "1.11.0"
indicatif = {version="*", features=["rayon"]}
