# TODO: Fill this out fully

[project]
name = "PySpinW"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pyspinw.__version__"}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["D1",  # undocumented objects 
          "D2",  # docstring formating w.r.t. whitespace
          "E",  # pycodestyle errors
          "PL",  # pylint
          "W",  # pycodestyle warnings
          ]

ignore = ["D105",  # Missing docstring in magic method (we know what magic methods do!)
          "D107",  # undocumented __init__
          "D203",  # 1 blank line before class docstring
          "D210",  # whitespace surrounding docstring text
          "D213",  # multi-line summary starts at second line
          "PLR",  # pylint refactor suggestions
          ]
