[project]
name = "pySpinW"
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.md"
license = {text = "GPLv3"}
keywords = [
    "Python",
    "physics",
    "magnons",
    "spinwaves",
    "inelastic neutron scattering"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase>=3.26.0",
    "numpy>=2.0.0",
    "packaging",
    "pycifrw",
    "spglib>2.1.0",
    "scipy>=1.16.1",
    "pyopengl>=3.1.10",
    "PySide6-Essentials",
    "matplotlib>=3.10.5",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyspinw.rust"
universal2 = true  # produces arm64 + x86_64 macOS wheels

[tool.setuptools.dynamic]
version = {attr = "pyspinw.__version__"}

[project.urls]
Homepage = "https://github.com/spinw/pyspinw"
Repository = "https://github.com/spinw/pyspinw"
"Bug Tracker" = "https://github.com/spinw/pyspinw/issues"

[build-system]
requires = ["maturin>=1.3,<2.0",
            "packaging",
            "numpy>=2.0.0"]
build-backend = "maturin"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["D1",  # undocumented objects 
          "D2",  # docstring formating w.r.t. whitespace
          "E",  # pycodestyle errors
          "PL",  # pylint
          "W",  # pycodestyle warnings
          ]

ignore = ["D105",  # Missing docstring in magic method (we know what magic methods do!)
          "D107",  # undocumented __init__
          "D203",  # 1 blank line before class docstring
          "D210",  # whitespace surrounding docstring text
          "D213",  # multi-line summary starts at second line
          "PLR",  # pylint refactor suggestions
          ]


[tool.pytest.ini_options]
markers = [
    "rust: marks tests that require the compiled Rust code",
]

