py.install_sources([
    '__init__.py',
    '_base.py',
    'anisotropy.py',
    'basis.py',
    'checks.py',
    'coupling.py',
    'experiment.py',
    'hamiltonian.py',
    'instrument.py',
    'lattice_analysis.py',
    'lattice_distances.py',
    'sample.py',
    'structure.py',
    'unitcell.py',
    'util.py'
  ],
  subdir: 'pyspinw'
)

subdir('calculations')
subdir('data')
subdir('visualisation')
